fix(client): Updated a bug where user avatar was not showing up after registering/signing up

--- a/TechBits/src/styles/home.css
+++ b/TechBits/src/styles/home.css
@@ -44,7 +44,7 @@
 .postContent {
   display: inline-block;
   width: 50%;
-  max-height: 400px;
+  /* max-height: 400px; */
   padding: 1%;
   color: inherit;
   row-gap: 10px;
